--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
     background-color: var(--card-front-color);
     text-align: center;
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo h3 {
@@ -35,6 +37,7 @@ body {
     margin: 0.6rem;
     border-radius: 0,6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 
 .cartao_conteudo p {
@@ -47,7 +50,28 @@ body {
     color: var(--text-color);
     font-weight: 500;
 }
+
  .cartao_conteudo_resposta p {
     color: var(--card-back-color);
     font-weight: 700;
+ }
+
+.cartao:hover .cartao_conteudo {
+    transform: rotateY(180deg);
+}
+
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao_conteudo_resposta {
+    transform: rotateY(180deg);
+}
+
+ footer {
+    background-color: black;
  }
