--- a/style.css
+++ b/style.css
@@ -94,3 +94,21 @@ body {
     font-size: 0.6rem;
     margin-top: 0.5rem;
  }
+
+@media (max-width: 560px){
+    body {
+        background: url('img/bg-mobile.webp');
+    }
+
+  .cartao {
+    flex: 1 0 calc(100% - 1rem);
+  }
+
+  .cartao-conteudo h3 {
+    font-size: 3vw;
+  }
+
+  .cartao_conteudo p {
+    font-size: 3.8vw;
+   }
+}
